--- a/style.css
+++ b/style.css
@@ -15,42 +15,42 @@ body{
 
 }
 
-.clock{
+.clock {
     width: 500px;
     height: 500px;
     position: relative;
-    background-color: lightgray;
+    margin: auto;
+    background: radial-gradient(circle, #05263c, #000d1a);
     border-radius: 50%;
-    bottom: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background:radial-gradient(circle,#05263c,#000d1a) ;
 }
 
-.clock::before{
+.clock::before {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 525px;
     height: 525px;
-    background: linear-gradient(to right,#00d9ff, #ee00ff) ;
-    box-shadow: 0 0 15px 15px rgba(0,0,0,0.2);
+    background: linear-gradient(to right, #00d9ff, #ee00ff);
+    box-shadow: 0 0 15px 15px rgba(0, 0, 0, 0.2);
     z-index: -1;
     border-radius: 50%;
 }
 
-
-.number{
-    transform:rotate(calc(30deg * var(--n)));
+.number {
+    transform: rotate(calc(30deg * var(--n)));
     position: absolute;
     text-align: center;
-    inset: 20px;
     font-size: 40px;
     color: #00d9ff;
     text-shadow: 0 0 12px #ee00ff;
-
+    /* Adjust position around the clock face */
+    top: 10px;
+    left: 50%;
+    transform-origin: center;
 }
 
 .number b{
@@ -58,23 +58,24 @@ body{
     display: inline-block;
 }
 
-.center-dot{
+.center-dot {
     position: absolute;
     width: 25px;
-    height:  25px;
-    background-color: gray ;
+    height: 25px;
+    background-color: gray;
     border-radius: 50%;
-
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-.hour-hand, .minute-hand,.second-hand {
+.hour-hand, .minute-hand, .second-hand {
     --rotate: 0;
     position: absolute;
     left: 50%;
     bottom: 50%;
-    transform: translate(-50%) rotate(calc(var(--rotate)* 1deg));
+    transform: translate(-50%, -100%) rotate(calc(var(--rotate) * 1deg));
     transform-origin: bottom;
-
 }
 
 .hour-hand{
