--- a/style.css
+++ b/style.css
@@ -50,6 +50,20 @@ body {
     display: inline-block;
 }
 
+/* Position each number around the clock face */
+.number:nth-child(1) { transform: rotate(30deg) translateY(-225px); }
+.number:nth-child(2) { transform: rotate(60deg) translateY(-225px); }
+.number:nth-child(3) { transform: rotate(90deg) translateY(-225px); }
+.number:nth-child(4) { transform: rotate(120deg) translateY(-225px); }
+.number:nth-child(5) { transform: rotate(150deg) translateY(-225px); }
+.number:nth-child(6) { transform: rotate(180deg) translateY(-225px); }
+.number:nth-child(7) { transform: rotate(210deg) translateY(-225px); }
+.number:nth-child(8) { transform: rotate(240deg) translateY(-225px); }
+.number:nth-child(9) { transform: rotate(270deg) translateY(-225px); }
+.number:nth-child(10) { transform: rotate(300deg) translateY(-225px); }
+.number:nth-child(11) { transform: rotate(330deg) translateY(-225px); }
+.number:nth-child(12) { transform: rotate(360deg) translateY(-225px); }
+
 .center-dot {
     position: absolute;
     width: 25px;
