--- a/style.css
+++ b/style.css
@@ -1,101 +1,94 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
 }
 
-body {
+body{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: radial-gradient(circle, #0b456b, #021c37);
+    background: radial-gradient(circle, #0b456b,#021c37);
+
 }
 
-.clock {
+.clock{
     width: 500px;
     height: 500px;
     position: relative;
-    margin: auto;
-    background: radial-gradient(circle, #05263c, #000d1a);
+    background-color: lightgray;
     border-radius: 50%;
+    bottom: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    background:radial-gradient(circle,#05263c,#000d1a) ;
 }
 
-.clock::before {
-    content: '';
+.clock::before{
+    content: "";
     position: absolute;
-    top: 0;
-    left: 0;
     width: 525px;
     height: 525px;
-    background: linear-gradient(to right, #00d9ff, #ee00ff);
-    box-shadow: 0 0 15px 15px rgba(0, 0, 0, 0.2);
+    background: linear-gradient(to right,#00d9ff, #ee00ff) ;
+    box-shadow: 0 0 15px 15px rgba(0,0,0,0.2);
     z-index: -1;
     border-radius: 50%;
 }
 
-.number {
+
+.number{
+    transform:rotate(calc(30deg *var(--n)));
     position: absolute;
+    text-align: center;
+    inset: 20px;
     font-size: 40px;
     color: #00d9ff;
     text-shadow: 0 0 12px #ee00ff;
-    transform-origin: center;
+
 }
 
-.number b {
+.number b{
+    transform: rotate(calc(-30deg * var(--n)));
     display: inline-block;
 }
 
-/* Position each number around the clock face */
-.number:nth-child(1) { transform: rotate(30deg) translateY(-225px); }
-.number:nth-child(2) { transform: rotate(60deg) translateY(-225px); }
-.number:nth-child(3) { transform: rotate(90deg) translateY(-225px); }
-.number:nth-child(4) { transform: rotate(120deg) translateY(-225px); }
-.number:nth-child(5) { transform: rotate(150deg) translateY(-225px); }
-.number:nth-child(6) { transform: rotate(180deg) translateY(-225px); }
-.number:nth-child(7) { transform: rotate(210deg) translateY(-225px); }
-.number:nth-child(8) { transform: rotate(240deg) translateY(-225px); }
-.number:nth-child(9) { transform: rotate(270deg) translateY(-225px); }
-.number:nth-child(10) { transform: rotate(300deg) translateY(-225px); }
-.number:nth-child(11) { transform: rotate(330deg) translateY(-225px); }
-.number:nth-child(12) { transform: rotate(360deg) translateY(-225px); }
-
-.center-dot {
+.center-dot{
     position: absolute;
     width: 25px;
-    height: 25px;
-    background-color: gray;
+    height:  25px;
+    background-color: gray ;
     border-radius: 50%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+
 }
 
-.hour-hand, .minute-hand, .second-hand {
+.hour-hand, .minute-hand,.second-hand {
+    --rotate: 0;
     position: absolute;
     left: 50%;
     bottom: 50%;
+    transform: translate(-50%) rotate(calc(var(--rotate)* 1deg));
     transform-origin: bottom;
+
 }
 
-.hour-hand {
+.hour-hand{
     width: 12px;
     height: 130px;
     background-color: black;
 }
 
-.minute-hand {
+.minute-hand{
     width: 12px;
     height: 190px;
     background-color: blue;
-}
 
-.second-hand {
+}
+ .second-hand{
     width: 6px;
     height: 210px;
     background-color: red;
-}
+ }
